# multi-agent-framework

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
docs/agent_specs/: README.md
docs/architecture/: README.md
docs/runbooks/: deployment.md
examples/: langgraph_workflow.py  simple_research_crew.py
infrastructure/docker/: docker-compose.yml
infrastructure/kubernetes/: deployment.yaml
scripts/: setup.bat  setup.sh
src/: cli.py
src/agents/: base_agent.py
src/config/: agents.yaml  config_manager.py
src/config/environments/: development.yaml  production.yaml
tests/behavioral/: research_workflow.feature
tests/unit/: test_base_agent.py  test_config_manager.py
